# multidict

./: .appveyor.yml  .clang-format  .codecov.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGES.rst  CHANGES.txt  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  benchmark.py  build-wheels.sh  gcovr.cfg  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-wheel.txt  run_docker.sh  setup.cfg  setup.py  shippable.yml  towncrier.toml  tox.ini
.azure-pipelines/: ci.yml  deploy.yml  stage-lint.yml  stage-test.yml
.circleci/: config.yml
.github/: CODEOWNERS  FUNDING.yml  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  bug-report.yml  feature-request.yml
.github/workflows/: auto-merge.yml  autosquash.yml  ci-cd.yml  ci.yml  codeql.yml  python-linters.yml  python-tests.yml  python-tox.yml  reusable-build-wheel.yml  reusable-cibuildwheel.yml  reusable-linters.yml
CHANGELOG/: 1226.bugfix.rst
CHANGES/: .TEMPLATE.rst  1002.feature.rst  1015.feature.rst  1015.packaging.rst  1036.breaking.rst  1045.bugfix.rst  1046.misc.rst  1061.bugfix  1063.misc  1070.feature  1078.feature  1081.feature  1083.misc  1084.feature  1084.misc  1092.contrib  1093.contrib.rst  1096.misc  1097.bugfix  1098.feature  1100.bugfix  1101.feature  1105.feature  1112.bugfix.rst  1113.bugfix.rst  1115.bugfix  1121.bugfix.rst  1122.contrib.rst  1123.contrib  1125.feature  1127.feature.rst  1128.feature  1133.bugfix.rst  1135.bugfix.rst  1141.bugfix.rst  1144.bugfix.rst  1145.packaging.rst  1147.bugfix.rst  1150.misc.rst  1152.misc.rst  (+144 more)
benchmarks/: becnhmark.py  benchmark.py  istr.py
docs/: HISTORY.rst  benchmark.rst  changes.rst  conf.py  in-cython.rst  index.rst  multidict.rst  spelling_wordlist.txt
multidict/: __init__.pxd  __init__.py  __init__.pyi  _abc.py  _c_pair_list.c  _c_pair_list.h  _compat.py  _istr.c  _istr.h  _multidict.c  _multidict.h  _multidict.pyx  _multidict_base.py  _multidict_c.c  _multidict_c.h  _multidict_iter.c  _multidict_iter.h  _multidict_py.py  _multidict_views.c  _multidict_views.h  _multidict_views.pxd  _pair_list.c  _pair_list.h  _pair_list.pxd  _pair_list.pyx  _testcapi.c  multidict_api.h
multidict/_multilib/: capsule.h  defs.h  dict.h  fastcall.h  hashtable.h  htkeys.h  istr.h  iter.h  pair_list.h  parser.h  pythoncapi_compat.h  state.h  views.h
packaging/pep517_backend/: _backend.py  _transformers.py  hooks.py
requirements/: ci.txt  dev.txt  doc-spelling.txt  doc.txt  lint.txt  mypy.txt  pytest.txt  wheel.txt
testcapi/: pyproject.toml  setup.cfg  setup.py
testcapi/testcapi/: __init__.py  _api.c
tests/: _multidict_cython.pyi  _multidict_cython.pyx  conftest.py  gen_pickles.py  test_abc.py  test_capi.py  test_circular_imports.py  test_copy.py  test_cython_import.py  test_free_threading.py  test_guard.py  test_incorrect_args.py  test_istr.py  test_leaks.py  test_multidict.py  test_multidict_.py  test_multidict_benchmarks.py  test_mutable_multidict.py  test_mypy.py  test_pickle.py  test_psleak_checks.py  test_to_dict.py  test_types.py  test_update.py  test_version.py  test_views_benchmarks.py
tests/isolated/: multidict_add_ft.py  multidict_bad_item.py  multidict_extend_dict.py  multidict_extend_multidict.py  multidict_extend_tuple.py  multidict_global_counter.py  multidict_pop.py  multidict_pop_missing.py  multidict_repr_ft.py  multidict_to_dict.py  multidict_type_leak.py  multidict_type_leak_items_values.py  multidict_update_multidict.py
tools/: build-wheels.sh  check_changes.py  generate_cython_api.py  run_docker.sh  setup_cython_test.py  upgrade_pythoncapi.py
