[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Keep this list small and intentional. Each entry is enforced
# repo-wide; do not enable additional lint groups as a drive-by.
select = [
  # Import sorting. Replaces a dedicated isort hook so the formatter
  # (ruff format) and the import sorter (ruff check --select I) come
  # from the same tool and rev.
  "I",
  # Imports must live at the top of the module. Late/inside-function
  # imports must be opted into explicitly with `# noqa: PLC0415` and a
  # comment explaining why (e.g. avoiding a heavy optional dependency
  # in the import path). Enforced because AI-assisted contributions
  # frequently introduce function-scoped imports that are unnecessary.
  "PLC0415",
  # pyupgrade: enforce modern Python syntax for the current
  # ``target-version`` (currently py310).
  "UP",
]

[tool.cibuildwheel]
test-requires = "-r requirements/pytest.txt"
test-command = 'pytest -m "not leaks" --no-cov {project}/tests'
# don't build PyPy wheels, install from source instead
skip = "pp*"

[tool.cibuildwheel.linux]
# Re-enable 32-bit builds (disabled by default in cibuildwheel 3.0)
archs = ["auto", "auto32"]
before-all = "yum install -y libffi-devel || apk add --upgrade libffi-dev || apt-get install libffi-dev"
