[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Keep this list small and intentional. Each entry is enforced
# repo-wide; do not enable additional lint groups as a drive-by.
select = [
  # Import sorting. Replaces a dedicated isort hook so the formatter
  # (ruff format) and the import sorter (ruff check --select I) come
  # from the same tool and rev.
  "I",
  # pyupgrade: enforce modern Python syntax for the current
  # ``target-version`` (currently py310).
  "UP",
]

[tool.cibuildwheel]
# `build[uv]` makes cibuildwheel use `uv` for every venv it provisions,
# both on the build side (passed to `python -m build` as `--installer=uv`)
# and when materializing the test environment. uv resolves and installs
# the wheel plus `requirements/pytest.txt` in roughly a second; the previous
# pip-based path took noticeably longer per ABI and ran once per matrix
# cell.
build-frontend = "build[uv]"
test-requires = "-r requirements/pytest.txt"
test-command = 'pytest -m "not leaks" --no-cov {project}/tests'
# don't build PyPy wheels, install from source instead
skip = "pp*"

[tool.cibuildwheel.linux]
# Re-enable 32-bit builds (disabled by default in cibuildwheel 3.0)
archs = ["auto", "auto32"]
before-all = "yum install -y libffi-devel || apk add --upgrade libffi-dev || apt-get install libffi-dev"
