[aliases]
test = pytest

[bdist_wheel]
# wheels should be OS-specific:
# their names must contain macOS/manulinux1/2010/2014/Windows identifiers
universal = 0

[metadata]
name = multidict
version = attr: multidict.__version__
url = https://github.com/aio-libs/multidict
project_urls =
  Chat: Gitter = https://gitter.im/aio-libs/Lobby
  CI: GitHub = https://github.com/aio-libs/multidict/actions
  Coverage: codecov = https://codecov.io/github/aio-libs/multidict
  Docs: RTD = https://multidict.readthedocs.io
  GitHub: issues = https://github.com/aio-libs/multidict/issues
  GitHub: repo = https://github.com/aio-libs/multidict
description = multidict implementation
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Andrew Svetlov
author_email = andrew.svetlov@gmail.com
license = Apache 2
license_files =
  LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

[options]
python_requires = >= 3.7
packages =
  multidict


[flake8]
# Y026,Y027: Incompatible with Python 3.7 (https://github.com/aio-libs/multidict/pull/798)
ignore = E302,E701,E305,E704,F811,N811,W503,Y026,Y027
max-line-length=88


[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True

known_first_party=multidict
known_third_party=pytest



[tool:pytest]
testpaths = tests
norecursedirs = dist build .tox docs requirements tools
addopts = --doctest-modules --cov=multidict --cov-report term-missing:skip-covered --cov-report xml --junitxml=junit-test-results.xml -v
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
junit_family = xunit2

[mypy]

[mypy-pytest]
ignore_missing_imports = true


[mypy-multidict._multidict]
ignore_missing_imports = true
