[bdist_wheel]
# wheels should be OS-specific:
# their names must contain macOS/manulinux1/2010/2014/Windows identifiers
universal = 0

[metadata]
name = multidict
version = attr: multidict.__version__
url = https://github.com/aio-libs/multidict
project_urls =
  Chat: Matrix = https://matrix.to/#/#aio-libs:matrix.org
  Chat: Matrix Space = https://matrix.to/#/#aio-libs-space:matrix.org
  CI: GitHub = https://github.com/aio-libs/multidict/actions
  Code of Conduct = https://github.com/aio-libs/.github/blob/master/CODE_OF_CONDUCT.md
  Coverage: codecov = https://codecov.io/github/aio-libs/multidict
  Docs: Changelog = https://multidict.aio-libs.org/en/latest/changes/
  Docs: RTD = https://multidict.aio-libs.org
  GitHub: issues = https://github.com/aio-libs/multidict/issues
  GitHub: repo = https://github.com/aio-libs/multidict
description = multidict implementation
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Andrew Svetlov
author_email = andrew.svetlov@gmail.com
license = Apache License 2.0
license_files =
  LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Intended Audience :: Developers

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13

[options]
python_requires = >= 3.9
install_requires =
  typing-extensions >= 4.1.0; python_version < '3.11'
packages =
  multidict
