[bdist_wheel]
# wheels should be OS-specific:
# their names must contain macOS/manulinux1/2010/2014/Windows identifiers
universal = 0

[metadata]
name = testcapi
# the version doesn't matter, the helper library is never uploaded to pypi
version = 0.0.0.dev0
description = multidict capi test utils
author = Andrew Svetlov
author_email = andrew.svetlov@gmail.com
license = Apache 2
[options]
python_requires = >= 3.9
packages =
  testcapi
